--- a/src/components/ReadingTime/ReadingTime.css
+++ b/src/components/ReadingTime/ReadingTime.css
@@ -4,4 +4,6 @@
     border: 1px solid #6047EC;
     background-color: rgba(96, 71, 236, 0.1);
     border-radius: 10px;
+    color: #6047EC;
+    text-align: center;
 }
